test/kubernetes/e2e/features/validation_allow_warnings/testdata/secret-deletion/upstream.yaml
apiVersion: gloo.solo.io/v1
kind: Upstream
metadata:
  name: my-us
  # Note: VirtualService and Upstream will both be in the install namespace
spec:
  kube:
    serviceName: my-svc
    servicePort: 18081
    serviceSpec:
      grpc: {}
