test/kubernetes/e2e/features/validation_allow_warnings/testdata/secret-deletion/validatingwebhookconfig-failure.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    app: gloo
    gloo: gateway
  name: gloo-gateway-validation-webhook-gloo-system
webhooks:
  - admissionReviewVersions:
      - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNakNDQWhxZ0F3SUJBZ0lJUUdCUHFNYzF6SE13RFFZSktvWklodmNOQVFFTEJRQXdKREVpTUNBR0ExVUUKQXhNWmMzVndaWEpuYkc5dkxYZGxZbWh2YjJzdFkyVnlkQzFqWVRBZUZ3MHlOREEzTVRjeE56UXhNamhhRncwegpOREEzTVRVeE56UXhNamhhTUNReElqQWdCZ05WQkFNVEdYTjFjR1Z5WjJ4dmJ5MTNaV0pvYjI5ckxXTmxjblF0ClkyRXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUtBb0lCQVFESmk3WGliSWo4VzNGTnUzVkEKYlFBRFVxK2lNVmNScFJQYWlxRUs2c2MwdHlpS2hhNStQV0pyL2pNZHpGS2lmZVN1VWxGdTZ6ZFZkRk5uUW4rOQpjL28vM0FIMTJM [...]
      service:
        name: gloo
        namespace: gloo-system
        path: /validation
        port: 443
    failurePolicy: Fail
    matchPolicy: Exact
    name: gloo.gloo-system.svc
    namespaceSelector: {}
    objectSelector: {}
    rules:
      - apiGroups:
          - gateway.solo.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - virtualservices
        scope: '*'
      - apiGroups:
          - gateway.solo.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - routetables
        scope: '*'
      - apiGroups:
          - gateway.solo.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - gateways
        scope: '*'
      - apiGroups:
          - gloo.solo.io
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - upstreams
        scope: '*'
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - DELETE
        resources:
          - secrets
        scope: '*'
      - apiGroups:
          - ratelimit.solo.io
        apiVersions:
          - v1alpha1
        operations:
          - CREATE
          - UPDATE
          - DELETE
        resources:
          - ratelimitconfigs
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
