test/kubernetes/e2e/features/validation_allow_warnings/testdata/secret-deletion/vs-with-secret.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: my-vs
spec:
  sslConfig:
    secretRef:
      # Note: Secret, VirtualService and Upstream will both be in the install namespace
      name: tls-secret
  virtualHost:
    domains:
      - valid.local
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: my-us
