test/kubernetes/e2e/features/validation_allow_warnings/testdata/secret-deletion/vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: my-vs
  # Note: VirtualService and Upstream will both be in the install namespace
spec:
  virtualHost:
    domains:
      - valid.local
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: my-us
